apis/shopper-baskets/examples/error/source-basket-exception.raml
#%RAML 1.0 NamedExample
value:
  {
      "type": "https://api.commercecloud.salesforce.com/documentation/error/v1/errors/no-source-basket-exception",
      "title": "Conflict",
      "detail": "The previous customer with ID 'cdo7rJNie7ahERqXSb51Yvz2M4' has no active basket."
  }